external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/struct_method_autocomplete.exp
error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/struct_method_autocomplete.move:18:24
   │
18 │         let _tmp1 = _a.;
   │                        ^
   │                        │
   │                        Unexpected ';'
   │                        Expected an identifier or a decimal number

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/struct_method_autocomplete.move:19:24
   │
19 │         let _tmp2 = _b.;
   │                        ^
   │                        │
   │                        Unexpected ';'
   │                        Expected an identifier or a decimal number

